ready basic program

--- a/public/html/main_layout.html.twig
+++ b/public/html/main_layout.html.twig
@@ -45,7 +45,7 @@
     }
 
     var WEB_PATH = '{{ WEB_PATH }}';
-    var USER_CLIENT = 'c01ec3607180d8a3bffef7317d53c4f4_15071_48d_e4d_e8';
+    var USER_CLIENT = '{{ user_token }}';
 </script>
 <body>
 <div id="wrapper">
