--- a/public/html/clients.html.twig
+++ b/public/html/clients.html.twig
@@ -28,10 +28,10 @@
                                 <th>Celular</th>
                                 <th>Fecha Nacimiento</th>
                                 <th>Editar</th>
+                                <th>Ver Recetas</th>
                             </tr>
                             </thead>
                             <tbody id="table_clients">
-
                             </tbody>
                         </table>
                     </div>
@@ -49,6 +49,7 @@
             <td>[[cellphone]]</td>
             <td>[[birthdate]]</td>
             <td><i class="fa fa-edit fa-fw" data-edit-client="[[id]]" style="cursor: pointer"></i></td>
+            <td><i class="fa fa-eye fa-fw" data-view-recipes-client="[[id]]" style="cursor: pointer"></i></td>
         </tr>
         [[/clients]]
     </script>
@@ -83,11 +84,13 @@
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label>Teléfono</label>
-                                        <input name="telephone" type="tel" class="form-control" placeholder="Ingrese teléfono">
+                                        <input name="telephone" type="tel" class="form-control"
+                                               placeholder="Ingrese teléfono">
                                     </div>
                                     <div class="form-group">
                                         <label>Celular</label>
-                                        <input name="cellphone" type="tel" class="form-control" placeholder="Ingrese celular">
+                                        <input name="cellphone" type="tel" class="form-control"
+                                               placeholder="Ingrese celular">
                                     </div>
                                     <div class="form-group">
                                         <label>Fecha nacimiento</label>
@@ -100,7 +103,9 @@
                                     <button type="submit" id="edit_client" class="btn btn-warning"
                                             style="display: none">Modificar cliente
                                     </button>
-                                    <button type="reset" id="clean_form_client" class="btn btn-danger">Limpiar formulario</button>
+                                    <button type="reset" id="clean_form_client" class="btn btn-danger">Limpiar
+                                        formulario
+                                    </button>
                                 </div>
                             </form>
                         </div>
@@ -109,4 +114,107 @@
             </div>
         </div>
     </div>
+
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="show_recipes" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Recetas del cliente</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="panel-body">
+                        <div class="panel-group" id="accordion" data-accordion-recipes-client>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <script type="text/html" id="recipes_clients">
+        [[#recipes]]
+        <div class="panel panel-default" data-show-recipe="[[id]]">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse[[id]]">Receta [[date]]</a>
+                </h4>
+            </div>
+            <div id="collapse[[id]]" class="panel-collapse collapse ">
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <label>Oculista</label><br>
+                                <label>[[oculist.name]] [[oculist.lastname]]</label>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <label>Fecha</label><br>
+                                <label>[[date]]</label>
+                            </div>
+                            <div class="form-group">
+                                <label>
+                                    [[#is_bps]]
+                                    Es bps
+                                    [[/is_bps]]
+                                    [[^is_bps]]
+                                    Nones
+                                    [[/is_bps]]
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <table width="100%" class="table table-striped table-bordered table-hover"
+                               id="dataTables-example">
+                            <thead>
+                            <tr>
+                                <th>Distancia</th>
+                                <th>Ojo</th>
+                                <th>Esf</th>
+                                <th>Cil</th>
+                                <th>Eje</th>
+                                <th>Prisma</th>
+                                <th>Dist. Inter</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            [[#recipe_data]]
+                            <tr class="odd gradeX">
+                                [[#close]]
+                                <td>Para cerca</td>
+                                [[/close]]
+                                [[#distance]]
+                                <td>Para lejos</td>
+                                [[/distance]]
+                                <td>[[eye]]</td>
+                                <td>[[esf]]</td>
+                                <td>[[cil]]</td>
+                                <td>[[eje]]</td>
+                                <td>[[prisma]]</td>
+                                <td>[[disInt]]</td>
+                            </tr>
+                            [[/recipe_data]]
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="row">
+                        <textarea readonly style="width: 100%; min-height: 70px; height: auto;">[[observation]]</textarea>
+                    </div>
+                    <div class="row">
+                        <button class="btn btn-danger" data-action-erase-recipe="[[id]]">BORRAR RECETA</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        [[/recipes]]
+    </script>
 {% endblock %}
